syntax = "proto3";

package api.sec_kill.v1;

option go_package = "github.com/BitofferHub/seckill/api/sec_kill/proto;proto";
option java_multiple_files = true;
option java_package = "api.sec_kill.proto";

service SecKill {
	rpc SecKillV1 (SecKillV1Request) returns (SecKillV1Reply);
	rpc SecKillV2 (SecKillV2Request) returns (SecKillV2Reply);
	rpc SecKillV3 (SecKillV3Request) returns (SecKillV3Reply);
	rpc GetGoodsList (GetGoodsListRequest) returns (GetGoodsListReply);
	rpc GetSecKillInfo (GetSecKillInfoRequest) returns (GetSecKillInfoReply);
	rpc GetOrderList (GetOrderListRequest) returns (GetOrderListReply);
	rpc GetOrderInfo (GetOrderInfoRequest) returns (GetOrderInfoReply);
}

message SecKillV1Request {
	int64 userID = 1;
	string goodsNum = 2;
	int32 num = 3;
}
message SecKillV1Reply {
	int32 code = 1;
	string message = 2;
	SecKillV1ReplyData data = 3;
}

message SecKillV1ReplyData {
	string orderNum = 1;
}


message SecKillV2Request {
	int64 userID = 1;
	string goodsNum = 2;
	int32 num = 3;
}
message SecKillV2Reply {
	int32 code = 1;
	string message = 2;
	SecKillV2ReplyData data = 3;
}

message SecKillV2ReplyData {
	string orderNum = 1;
}

message SecKillV3Request {
	int64 userID = 1;
	string goodsNum = 2;
	int32 num = 3;
}
message SecKillV3Reply {
	int32 code = 1;
	string message = 2;
	SecKillV3ReplyData data = 3;
}

message SecKillV3ReplyData {
	string secNum = 1;
}

message GetGoodsListRequest {
	int64 userID = 1;
	int32  offset = 2;
	int32  limit = 3;
}
message GetGoodsListReply {
	int32 code = 1;
	string message = 2;
	GetGoodsListReplyData data =3;
}

message GetGoodsListReplyData {
	repeated GoodInfo goodsList = 1;
}

message GetGoodsInfoRequest {
	int64 userID = 1;
	string goodsNum = 2;
}
message GetGoodsInfoReply {
	int32 code = 1;
	string message = 2;
	GetGoodsInfoReplyData data =3;
}

message GetGoodsInfoReplyData {
	GoodInfo goodsInfo = 1;
}

message GoodInfo {
	string goodsNum = 1;
	string goodsName = 2;
	float price = 3;
	string picUrl  = 4;
	int64 seller  = 5;
}

message GetSecKillInfoRequest {
	int64 userID = 1;
	string secNum = 2;
}
message GetSecKillInfoReply {
	int32 code = 1;
	string message = 2;
	GetSecKillInfoReplyData data = 3;
}

message GetSecKillInfoReplyData {
	int32  status = 1;
	string orderNum = 2;
	string secNum = 3;
	string goodsNum = 4;
}

message GetOrderListRequest {
	int64 userID = 1;
	int32  status = 2;
}

message GetOrderInfoRequest {
	int64 userID = 1;
	string orderNum = 2;
}

message GetOrderInfoReply {
	int32 code = 1;
	string message = 2;
	GetOrderInfoReplyData data = 3;
}

message GetOrderInfoReplyData {
	int64 seller   = 1;
	int64 buyer  = 2;
	string orderNum  = 3;
	int64 goodsNum = 4;
	float Price    = 5;
	int32 status = 6;
}

message GetOrderListReply {
	int32 code = 1;
	string message = 2;
}